# SFMLPaintDash

./: CMakeLists.txt  README.md
headers/: constants.hpp  gameApplication.hpp  sprite.hpp  textUI.hpp
headers/functions/: math.hpp
headers/managers/: sceneManager.hpp  spriteManager.hpp  textureManager.hpp
headers/scene/: mainMenuScene.hpp  scene.hpp
headers/scenes/: mainMenuScene.hpp  scene.hpp
headers/ui/: mainMenuPanelUI.hpp  textUI.hpp
src/: constants.cpp  constants.hpp  gameApplication.cpp  main.cpp  sprite.cpp  sprite.hpp  textUI.cpp
src/managers/: sceneManager.cpp  spriteManager.cpp  textureManager.cpp
src/scene/: mainMenuScene.cpp  scene.cpp
src/scenes/: mainMenuScene.cpp  mainMenuScene.hpp  scene.cpp
src/ui/: mainMenuPanelUI.cpp  textUI.cpp
